--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
 <% if user_signed_in? %>
   <%= link_to 'OUT', destroy_user_session_path, method: :delete %>
+  <% if user_authenticated %>
+    here will be the links to create all the entrance
+  <% end %>
 <% else %>
   <%= link_to 'IN', new_user_session_path %>
 <% end %>
