--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,6 +1,10 @@
+<p id="notice"><%= notice %></p>
 <%= render template: 'navbar/index' %>
 <h1>Notes</h1>
-
+<br>
+<%= link_to 'New Note', new_note_path %>
+<br>
+<br>
 <table>
   <thead>
     <tr>
@@ -20,7 +24,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Note', new_note_path %>
