--- a/app/views/navbar/index.html.erb
+++ b/app/views/navbar/index.html.erb
@@ -3,4 +3,5 @@
   <div><%= link_to 'Note', notes_path %></div>
   <div><%= link_to 'Challenge', challenges_path %></div>
   <div><%= link_to 'Book', books_path %></div>
+  <div><%= link_to 'OUT', destroy_user_session_path, method: :delete %></div>
 </div>
