--- a/app/views/navbar/index.html.erb
+++ b/app/views/navbar/index.html.erb
@@ -4,5 +4,6 @@
   <div><%= link_to 'Challenge', challenges_path %></div>
   <div><%= link_to 'Book', books_path %></div>
   <div><%= link_to 'Topic', topics_path %></div>
+  <div><%= link_to 'CMD', careers_path %></div>
   <div><%= link_to 'OUT', destroy_user_session_path, method: :delete %></div>
 </div>
