send cmd by email

--- a/app/views/careers/show.html.erb
+++ b/app/views/careers/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'Send CMD', send_email_careers_path(id: @career.id), method: :post %>
 <p>
   <strong>Title:</strong>
   <%= @career.title %>
