--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,9 @@
-<%= form_with(model: comment) do |form| %>
+<%= form_with url: comments_path do |form| %>
   <%= hidden_field(:comment, :commenteable_type, :value => @commenteable_type) %>
   <%= hidden_field(:comment, :commenteable_id, :value => @commenteable_id) %>
   <% if comment&.errors&.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
       <ul>
         <% comment.errors.each do |error| %>
           <li><%= error.full_message %></li>
