--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,7 +13,7 @@
 
 <ul>
   <% @book.comments.each do |comment| %>
-    <li><%= comment.body %></li>
+    <li><%= comment.body %><%= link_to 'Delete', comment_path(comment), method: :delete %></li>
   <% end %>
 </ul>
 
