--- a/app/views/careers/_form.html.erb
+++ b/app/views/careers/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, autofocus: true %>
   </div>
 
   <div class="field">
