--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -25,8 +25,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'first page |', blogs_path %>
-<%= link_to 'prev page |', blogs_path(page: @page - 1) if @page > 0 %>
-<b>Page:<%= @page %></b> |
-<%= link_to 'next page', blogs_path(page: @page + 1) %>
-<%= link_to '| show all', blogs_path(show_all: true) unless @show_all %>
+<%= render template: 'pagination/index', locals: { path: 'blogs_path' } %>
