--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -23,8 +23,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'first page |', notes_path %>
-<%= link_to 'prev page |', notes_path(page: @page - 1) if @page > 0 %>
-<b>Page:<%= @page %></b> |
-<%= link_to 'next page', notes_path(page: @page + 1) %>
-<%= link_to '| show all', notes_path(show_all: true) unless @show_all %>
+<%= render template: 'pagination/index', locals: {path: 'notes_path'} %>
