open pdf link in new tab

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -6,7 +6,10 @@
 
 <p>
   <strong>Description:</strong>
+  <%# @note.body.body.attachments.first[:filename].blank? %>
+  <div data-controller="richtext">
   <%= @note.body %>
+  </div>
 </p>
 
 <%= link_to 'Edit', edit_note_path(@note) %> |
