--- a/app/views/careers/index.html.erb
+++ b/app/views/careers/index.html.erb
@@ -15,8 +15,7 @@
   <tbody>
     <% @careers.each do |career| %>
       <tr>
-        <td><%= career.title %></td>
-        <td><%= link_to 'Show', career %></td>
+        <td><%= link_to career.title, career %></td>
         <td><%= link_to 'Edit', edit_career_path(career) %></td>
         <td><%= link_to 'Destroy', career, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
