add font awesome to all models

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -18,8 +18,16 @@
       <tr>
         <td><%= link_to blog.title, blog %></td>
         <td><%= link_to blog.url, blog.url, target: '_blank' %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to edit_blog_path(blog) do %>
+            <i class="fas fa-edit"></i>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to blog, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="far fa-trash-alt"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
