--- a/app/views/careers/index.html.erb
+++ b/app/views/careers/index.html.erb
@@ -3,6 +3,7 @@
 <br>
 <%= link_to 'New CMD', new_career_path %>
 <br>
+<%= render template: 'search/index', locals: { path: 'careers_path' } %>
 <br>
 <table>
   <thead>
