--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <%= render template: 'navbar/index' %>
-<h1>My Blog Lists</h1>
+<h1>My Link List</h1>
 <br>
 <%= link_to 'New List', new_list_path %>
 <br>
