--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,6 +3,7 @@
 <br>
 <%= link_to 'New List', new_list_path %>
 <br>
+<%= render template: 'search/index', locals: { path: 'lists_path' } %>
 <br>
 <table>
   <thead>
