--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -3,6 +3,7 @@
 <br>
 <%= link_to 'New Challenge', new_challenge_path %>
 <br>
+<%= render template: 'search/index', locals: { path: 'challenges_path' } %>
 <br>
 <table>
   <thead>
